# opsys_hw_2

./: CMakeLists.txt  grep_proc.c  grep_thread.c  homework2.py  homework2_2.py  mediumFile.txt  process_grep.c  report.txt  test.txt  thread_grep.c  tom_werner_hw2_problem1_grep_thread.c
list/: arraylist.c  arraylist.h
regex/: regex.c  regex.h
